--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name:                Pg-Loader
-version:             0.06
+version:             0.07
 abstract:            Perl extension for loading Postgres tables
-license:             ~
+license:             perl
 author:              
     - Ioannis Tambouras <ioannis@cpan.org>
 generated_by:        ExtUtils::MakeMaker version 6.42
