Import of IOANNIS/Pg-Loader-0.10 from CPAN.
gitpan-cpan-distribution: Pg-Loader
gitpan-cpan-version:      0.10
gitpan-cpan-path:         IOANNIS/Pg-Loader-0.10.tar.gz
gitpan-cpan-author:       IOANNIS
gitpan-cpan-maturity:     released

--- a/t/makefile
+++ b/t/makefile
@@ -1,12 +1,12 @@
 .PHONY: $(shell ls)
 .SILENT: 
 
-#   00_load.t         		01b_pod.t             01c_coverage.t  
-#   02_range2list     		03_schema_name.t      04_get_columns_names.t
+#   00_load.t         		01b_pod.t                 01c_coverage.t  
+#   02_range2list     		03_schema_name.t          04_get_columns_names.t
 #   05_field_nums_reqe.t        06_requested_cols.t       
-#   10_simplify_ini.t           11_ini_conf.t         12_error_check.t
-#   13_subset.t                 14_check_copy.t       15_copy_param.t
-#   20_disable_indexes.t        21_enable_indexes.t   22_stop_input.t
+#   10_simplify_ini.t           11_ini_conf.t             12_error_check.t
+#   13_subset.t                 14_check_copy_grammar.t   15_copy_param.t
+#   20_disable_indexes.t        21_enable_indexes.t       22_stop_input.t
 #   31_add_defaults.t           32_filter_ini.t
 #   40_kwalitee.t
  
@@ -14,8 +14,7 @@ MODULES  =  -MData::Dumper -MCarp
 MODULES +=  -MTest::More   -Mblib=../blib -Mv5.10 
 
 #all: 01c_coverage.t
-#all: 14_copy_param.t
-all: 16_combine.t
+all: 31_add_defaults.t
 #all: 40_kwalitee.t
 #all: 32_filter_ini.t
 #all: 06_requested_cols.t
