Import of IOANNIS/Pg-Loader-0.12 from CPAN.
gitpan-cpan-distribution: Pg-Loader
gitpan-cpan-version:      0.12
gitpan-cpan-path:         IOANNIS/Pg-Loader-0.12.tar.gz
gitpan-cpan-author:       IOANNIS
gitpan-cpan-maturity:     released

--- a/t/makefile
+++ b/t/makefile
@@ -16,8 +16,7 @@ MODULES  =  -MData::Dumper -MCarp
 MODULES +=  -MTest::More   -Mblib=../blib -Mv5.10 
 
 #all: 01c_coverage.t
-#all: 31_add_defaults.t
-all:  14_check_copy_grammar.t
+all: 31_add_defaults.t
 #all: 24_sql_clause.t
 #all: 16_combine.t
 #all: 40_kwalitee.t
