--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Pg-Loader
-version:             0.11
+version:             0.12
 abstract:            Perl extension for loading Postgres tables
 license:             perl
 author:              
@@ -21,6 +21,7 @@ requires:
     Test::Pod:                     1.0
     Test::Pod::Coverage:           1.0
     Text::CSV:                     1.06
+    Text::Table:                   1.107
     Time::HiRes:                   1.9711
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
