--- a/t/makefile
+++ b/t/makefile
@@ -2,28 +2,26 @@
 .SILENT: 
 
 #   00_load.t         		01b_pod.t                 01c_coverage.t  
-#   02_range2list     		03_schema_name.t          04_get_columns_names.t
-#   05_field_nums_reqe.t        06_requested_cols.t       
+#   02_hasversion.t             02_meta.t                 04_dependencies.t
+#   05_minimumversion.t                                   07.strict.t
 #   10_simplify_ini.t           11_ini_conf.t             12_error_check.t
 #   13_subset.t                 14_check_copy_grammar.t   15_copy_param.t
-#   16_combine.t
+#   16_combine.t                17_switch2update.t
 #   20_disable_indexes.t        21_enable_indexes.t       22_stop_input.t
 #   24_sql_clause.t
 #   31_add_defaults.t           32_filter_ini.t
 #   40_kwalitee.t
+#   52_range2list     		53_schema_name.t          54_get_columns_names.t
+#   55_field_nums_reqe.t        56_requested_cols.t       
  
 MODULES  =  -MData::Dumper -MCarp  
 MODULES +=  -MTest::More   -Mblib=../blib -Mv5.10 
 
-#all: 01c_coverage.t
-all: 31_add_defaults.t
-#all: 24_sql_clause.t
-#all: 16_combine.t
-#all: 40_kwalitee.t
-#all: 32_filter_ini.t
-#all: 06_requested_cols.t
 
-4* 3* 2* 1* 0*:
+#all: 31_add_defaults.t
+all: 17_switch2update.t
+
+5* 4* 3* 2* 1* 0*:
 	perl -w -Mstrict -Mblib  $(MODULES)   $@  
 cp:
 	cp  ../blib/lib/Pg/Loader.pm    ../lib/Pg
