--- a/examples/pgloader.conf
+++ b/examples/pgloader.conf
@@ -10,7 +10,7 @@ doublequote=false
 
 [a]
 use_template=cvs1
-filename=exam.dat
+filename=/home/ioannis/pg/pgloader/exam.dat
 table=exam
 field_sep=\t
 field_sep=,
